6896727: nsk/logging/LoggingPermission/LoggingPermission/logperm002 fails with G1, EscapeAnalisys

Move instance store's memory users to corresponding memory slices when updating its memory edge.

Reviewed-by: never